# memory-hall

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
deploy/: memhall-backup.sh
docs/: INTEGRATION.md  PROMOTE-COLD-STANDBY.md  agent-integration.md  api.md  deploy.md  design.md  tutorial-why-session-memory.md
docs/adr/: 0001-drop-mem0.md  0002-multi-tenant-from-day-one.md  0003-engine-library-vs-deployment-platform.md  0004-standardization-stance.md  0005-v0.2-minimum-viable-contract.md  0006-http-embedder-embed-queue-isolation.md  0007-minimal-token-auth.md  0008-personal-pki-lightweight-stance.md  0009-admin-gate.md  README.md
docs/benchmarks/: README.md  concurrency.py  hit3_recall.py  race.py  results-2026-04-18.md  results-2026-04-19.md
docs/council/: 2026-04-19-memory-hall-worth-it-codex-answer.md  2026-04-19-sqlite-vec-codex-answer.md  2026-04-27-codex-phase-b-dissent.md  2026-04-27-memhall-health-codex-answer.md  2026-04-27-memhall-health-codex-phase-a.md  2026-04-27-phase-a5-pr1-codex-answer.md  2026-04-27-phase-a5-pr2-codex-answer.md
docs/guides/: session-skills-macos.md  session-skills-windows.md
docs/operations/: incident-2026-04-20-embed-queue.md  promote-runbook.md
examples/claude_mcp/: README.md
examples/codex_cli/: README.md
examples/shell/: write_memory.sh
migrations/: 20260427_add_embed_retry_columns.sql
scripts/: bench_hybrid.py  contract_test_server.py  memhall-health-probe.sh
src/memory_hall/: __init__.py  __main__.py  config.py  metadata_patch.py  models.py
src/memory_hall/auth/: __init__.py
src/memory_hall/cli/: __init__.py  main.py
src/memory_hall/embedder/: __init__.py  http_embedder.py  interface.py  ollama_embedder.py
src/memory_hall/server/: __init__.py  app.py
src/memory_hall/storage/: __init__.py  interface.py  sqlite_store.py  (+1 more)
tests/: conftest.py  test_amh_contract.py  test_auth.py  test_baton_cas.py  test_cjk_search.py  test_cli_auth.py  test_cli_reindex.py  test_dedup.py  test_embedded.py  test_fts_tokenization.py  test_http_embedder.py  test_hybrid_search.py  test_link_supersedes.py  test_lookup_hash.py  test_patch_metadata.py  test_patch_metadata_allowlist.py  test_reindex_retry.py  test_search_degraded.py  test_search_privacy.py  test_smoke.py  test_sync_status.py  test_tenant_isolation.py  test_vec0.py  test_write_search.py
(+7 files in other folders)
